src/main/resources/scss/app.scss
@import "../fonts/foundation-icons/index.css";
@import "../fonts/open-sans/index.css";
@import "../fonts/open-sans-condensed/index.css";

@import "settings";
@import "variables"; // we override some foundation settings so this has to come between settings and foundation.
@import "foundation";
@import "transitions";

@import "common/grid-view";
@import "common/components/card";
@import "common/components/error";
@import "common/components/loading";
@import "common/components/pager";
@import "common/components/video";
@import "common/components/collectionfilter";

@import "course/components/detail-view";
@import "course/components/overview";

@import "content/components/view";

@import "login/signup";
@import "login/login";

@import "notifications/components/view";

@import "sidenav";


@mixin input-typography {
	text-transform: uppercase;
	letter-spacing:0.1em;
}

* {
	-webkit-tap-highlight-color: rgba(0,0,0,0) !important;
}

*:not(input) {
	-webkit-font-smoothing: antialiased;
	-webkit-touch-callout: none;
	//We only want specifc parts to be selectible.
	-webkit-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	-o-user-select: none;
	user-select: none;
}

.button, input[type=button], input[type=submit], input[type=reset], button {
	@include input-typography;
}


a.disabled {
	opacity:0.4;
}


a.back {
	padding: 0 0.2rem;
	height: 2.8125rem;
	line-height: 2.8125rem;
	position: absolute;
	overflow: hidden;
	background: #fff;
	color: #333;
	top: -2.8125rem;
	left: 0;

	&::before {
		content: '\2039';
		font-size: 4rem;
		font-weight: 100;
		line-height: 0;
		position: relative;
		top: 0.6875rem;
	}
}


a.toolbar-button-left {
	padding: 0 0.5rem;
	height: 2.8125rem;
	line-height: 2.8125rem;
	font-size: 2em;
	position: absolute;
	overflow: hidden;
	color: #333;
	top: -2.8125rem;
	left: 2.8125rem;
}

a.right-off-canvas-toggle {
	width: 2.8125rem;
	height: 2.8125rem;
	color: #fff;
	font-size: 1.5rem;
	text-align: center;
	display: block;

	img {
		width: 2rem;
		border-radius: 100%;
		vertical-align: text-top;
	}
}


.dark {
	.tab-bar {
		background: #333;
		color: #fff;

		.menu-icon span::after {
			box-shadow: 0 0px 0 1px #fff,
						0 7px 0 1px #fff,
						0 14px 0 1px #fff;
		}
	}

	a.toolbar-button-left {
		color: #fff;
	}
}

.icon-bar>* {
	&:hover {
		background:inherit;
	}
	&.active {
		background: $primary-color;
	}
}

.tab-bar-section .title {
	overflow: hidden;
	position: relative;
	width: 32px;
	display: inline-block;
	text-indent: -100rem;

	&::after {
		content: '';
		width: 32px;
		height: 32px;
		background: transparent url('../images/icons/logo.png') center center;
		background-size: contain;
		position: absolute;
		margin-top: -50%;
		top: 50%;
		left: 0;
	}
}

.scroll-lock {
	&, & > body {
		overflow: hidden !important;
	}
}

aside[class*=off-canvas-menu] {
	bottom: auto;
	position: absolute;
	height: 100%;
	height: 100vh;

	.button-box,
	.logout {
		position: relative;
		margin: 3rem 0;
	}
}

//iOS 7 fix:
/** iPad with portrait orientation. */
@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:portrait){
  aside[class*=off-canvas-menu] { height: 1024px; }}

/** iPad with landscape orientation. */
@media all and (device-width: 768px) and (device-height: 1024px) and (orientation:landscape){
  aside[class*=off-canvas-menu] { height: 768px; }}

/** iPhone 1-4 with portrait orientation. */
@media all and (device-width: 320px) and (device-height: 480px) and (orientation:portrait){
	aside[class*=off-canvas-menu] { height: 480px; }}

/** iPhone 1-4 with landscape orientation. */
@media all and (device-width: 320px) and (device-height: 480px) and (orientation:landscape){
	aside[class*=off-canvas-menu] { height: 320px; }}

/** iPhone5 with portrait orientation. */
@media all and (device-width: 320px) and (device-height: 568px) and (orientation:portrait){
	aside[class*=off-canvas-menu] { height: 568px; }}

/** iPhone5 with landscape orientation. */
@media all and (device-width: 320px) and (device-height: 568px) and (orientation:landscape){
	aside[class*=off-canvas-menu] { height: 320px; }}
//iPhone 6's never had iOS7 on them.



.main-section {
	min-height:30em;
	position: relative;
}


.animate {
	-webkit-transition: all .3s ease-out;
	-moz-transition: all .3s ease-out;
	-ms-transition: all .3s ease-out;
	-o-transition: all .3s ease-out;
	transition: all .3s ease-out;
}


.sadface {
	font-size: 5rem;
	transform: rotate(90deg);
	display: inline-block;
	background: lightblue;
	border-radius: 100%;
	line-height: 1;
	width: 6rem;
	height: 6rem;
	text-indent: 1.6rem;
}

